<resources>
    <string name="app_name">secret santa manager</string>
    <string name="enter_secret_santa">Please enter data for a new secret santa!</string>
    <string name="name">last name</string>
    <string name="forename">first name</string>
    <string name="email">email</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="add">add</string>
    <string name="fillFormMessage">please fill in your forename, name and correct email address</string>
    <string name="santaAddedToast">a new santa has been added</string>
    <string name="emailAssignmentSubject">your secret santa assignment</string>
    <string name="askDeleteList">do you want to delete the complete List?</string>
    <string name="assignmentDoneToast">Congratulations, your secret santas have been assigned to another santa. Check your emails please!</string>
    <string name="readyToShuffleDialog">Are you sure your done and want to shuffle?</string>
    <string name="positive">yes</string>
    <string name="negative">no</string>
    <string name="permissionText">Error - please make sure this app has the needed permissions</string>
    <string name="emailErrorHint">invalid email address</string>
    <string name="cant_assign_message">you need at least 3 people to do this</string>
</resources>
