<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <!--empty textview for spacing-management -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <!--instruction text for entering personal data -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/enter_secret_santa"
            android:textAlignment="center"/>
        <!--empty textview for spacing-management -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_forename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forename" />

            <EditText
                android:id="@+id/edit_text_forename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/cancel_button_firstName"
                android:src="@drawable/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickResetFirstName"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/cancel_button_name"
                android:src="@drawable/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickResetName"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_view_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edit_text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <ImageView
                android:id="@+id/cancel_button_email"
                android:src="@drawable/cancelbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clickResetEmail"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text_view_email_error_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emailErrorHint"
                android:textAlignment="center"
                android:visibility="invisible"
                android:textColor="#D50000"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/quickfill_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="quickfill(debug)"
                android:onClick="quickFill"/>


            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cancel"
                android:onClick="clickCancelButton"/>
            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="2"
                android:text="@string/save"
                android:onClick="clickSaveButton"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>